# django-dukop

./: .gitignore  .travis.yml  README.md  manage.py  pytest.ini  setup.cfg  t
.circleci/: config.yml
src/dukop/: urls.py  views.py
src/dukop/apps/calendar/: admin.py  apps.py  context_processors.py  feeds.py  forms.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py  widgets.py
src/dukop/apps/calendar/migrations/: 0004_weekdays.py  0006_null_interval.py  0007_end_null.py  0008_event_links.py  0009_event_short_description.py  0010_intervals.py  0011_link_length.py  0012_spheres.py  0013_oldeventsync.py  0014_rm_show_nb_default_published_false.py  0015_autofield_sphere_admins.py  0016_spheres_defaults.py  0017_alter_sphere_admins.py  0018_intervals_refactor.py  0019_rename_interval_recurrence.py  0020_on_delete_cascade_group.py  0021_location.py  0022_online_tba.py  0023_alter_eventrecurrence_end.py
src/dukop/apps/news/: admin.py  apps.py  models.py  urls.py  views.py
src/dukop/apps/sync_old/: apps.py  models.py  router.py  views.py
src/dukop/apps/users/: admin.py  apps.py  email.py  forms.py  models.py  urls.py  views.py
src/dukop/apps/utils/: apps.py
src/dukop/settings/: base.py  dev.py  production.py  test.py
src/dukop/static/css/: _badges_tags.scss  _base.scss  _buttons.scss  _card.scss  _collapsible.scss  _create-form.scss  _event-table.scss  _flexboxgrid.scss  _forms.scss  _header.scss  _icons.scss  _message.scss  _mixins.scss  _remixicons.scss  _simplegrid.scss  _tables.scss  _timeline.scss  application.scss
src/dukop/static/js/: event.js  main.js  messages.js
src/dukop/templates/: 404.html  500.html  base.html
src/dukop/templates/includes/: message.html
test/: test_basic.py
tests/: fixtures_calendar.py  fixtures_users.py  test_basic.py  test_event_interval.py  test_event_recurrence.py  test_security.py  test_template_tags.py  test_views_event.py
(+58 files in other folders)
