[check-manifest]
ignore =
    *.sublime-project
    .git*
    .vscode/*
    manage.py

[metadata]
name = dukop
version = attr:dukop.__version__
description = Describe your project in one sentence.
long_description = file: README.md
author = dukop team
author_email = development@example.com
url = https://www.example.com/
license = Other/Proprietary License
# If you use a license file activate the line below.
# license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django :: 2.1
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: JavaScript
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    django>=3.2,<3.3
    django-csp>=3,<4
    django_compressor>=2.4,<2.5
    csscompressor>=0.9.5
    django_libsass>=0.8,<0.9
    pillow
    django-ratelimit>=2,<3
    django-sekizai
    sorl-thumbnail
    requests
    django-markdownfield>=0.10
    django-ical>=1.7.3,<1.8
python_requires = >=3.8

[options.entry_points]
console_scripts =
    django-project=django.core.management:execute_from_command_line

[options.extras_require]
dev =
    check-manifest==0.37
    django-debug-toolbar>=3.2,<3.3
    pre-commit
    pytest>=6,<7
    pytest-django>=4.2,<4.3
    pytest-cov
production =
    psycopg2>=2.8.2

[options.packages.find]
where =
    src

[flake8]
ignore = E501 W503
max-line-length = 160
max-complexity = 10
exclude = */*migrations
